# mcs51emu

./: .clang-format  CMakeLists.txt  LICENSE  README.md  generate_opcode.py  generate_sfr.py  opcodes.md  sfrs.md
examples/: .gitignore  CMakeLists.txt  Makefile  bin_to_array.py  byte_to_bin.py  example.S  example.c
include/: instruction_register.h  mcs51.h  nvic.h  opcode.h  sfr.h
src/: .gitignore  mcs51.c  mcs51_helpers.h  mcs51_internal.h  mcs51_register.c  mcs51_register.h  nvic.c  opcode.c  opcode_impl.c
tests/: CMakeLists.txt  tests.c
